Optionally install bytebuilders-ui HelmRepository with ui-server (#93)
